k8s/arr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: arr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
      - name: sonarr
        image: lscr.io/linuxserver/sonarr:4.0.12
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - mountPath: /config
          name: sonarr-data
        - mountPath: /tv
          name: tvseries
        - mountPath: /downloads
          name: downloads
        ports:
        - containerPort: 8989
        livenessProbe:
          httpGet:
            path: /
            port: 8989
          initialDelaySeconds: 60
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /
            port: 8989
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
      volumes:
      - name: sonarr-data
        persistentVolumeClaim:
          claimName: sonarr-data-pvc
      - name: tvseries
        nfs:
          server: 192.168.2.252
          path: /mnt/tank/nfs/Temp/Tv
      - name: downloads
        nfs:
          server: 192.168.2.252
          path: /mnt/Junk/Download
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  namespace: arr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      containers:
      - name: prowlarr
        image: lscr.io/linuxserver/prowlarr:1.30.2
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - mountPath: /config
          name: prowlarr-data
        ports:
        - containerPort: 9696
        livenessProbe:
          httpGet:
            path: /
            port: 9696
          initialDelaySeconds: 60
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /
            port: 9696
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
      volumes:
      - name: prowlarr-data
        persistentVolumeClaim:
          claimName: prowlarr-data-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: arr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      containers:
      - name: radarr
        image: lscr.io/linuxserver/radarr:5.18.4
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - mountPath: /config
          name: radarr-data
        - mountPath: /tv
          name: movies
        - mountPath: /downloads
          name: downloads
        ports:
        - containerPort: 7878
        livenessProbe:
          httpGet:
            path: /
            port: 7878
          initialDelaySeconds: 60
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /
            port: 7878
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
      volumes:
      - name: radarr-data
        persistentVolumeClaim:
          claimName: radarr-data-pvc
      - name: movies
        nfs:
          server: 192.168.2.252
          path: /mnt/tank/nfs/Temp/Movies
      - name: downloads
        nfs:
          server: 192.168.2.252
          path: /mnt/Junk/Download
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lidarr
  namespace: arr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lidarr
  template:
    metadata:
      labels:
        app: lidarr
    spec:
      containers:
      - name: lidarr
        image: lscr.io/linuxserver/lidarr:2.9.6
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - mountPath: /config
          name: lidarr-data
        - mountPath: /music
          name: music
        - mountPath: /downloads
          name: downloads
        ports:
        - containerPort: 8686
        livenessProbe:
          httpGet:
            path: /
            port: 8686
          initialDelaySeconds: 60
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /
            port: 8686
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
      volumes:
      - name: lidarr-data
        persistentVolumeClaim:
          claimName: lidarr-data-pvc
      - name: music
        nfs:
          server: 192.168.2.252
          path: /mnt/tank/nfs/Music
      - name: downloads
        nfs:
          server: 192.168.2.252
          path: /mnt/Junk/Download
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyseerr
  namespace: arr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyseerr
  template:
    metadata:
      labels:
        app: jellyseerr
    spec:
      containers:
      - name: jellyseerr
        image: fallenbagel/jellyseerr:2.3.0
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - mountPath: /app/config
          name: jellyseerr-data
        ports:
        - containerPort: 5055
        livenessProbe:
          httpGet:
            path: /
            port: 5055
          initialDelaySeconds: 60
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /
            port: 5055
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
      volumes:
      - name: jellyseerr-data
        persistentVolumeClaim:
          claimName: jellyseerr-data-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: readarr
  namespace: arr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: readarr
  template:
    metadata:
      labels:
        app: readarr
    spec:
      containers:
      - name: readarr
        image: lscr.io/linuxserver/readarr:develop
        imagePullPolicy: Always
        ports:
        - containerPort: 8787
        volumeMounts:
        - name: config
          mountPath: /config
        - name: books
          mountPath: /books
        - name: downloads
          mountPath: /downloads
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: readarr-config-pvc
      - name: books
        nfs:
          server: 192.168.2.252
          path: /mnt/tank/nfs/Temp/Books
      - name: downloads
        nfs:
          server: 192.168.2.252
          path: /mnt/Junk/Download
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: audiobookshelf
  namespace: arr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: audiobookshelf
  template:
    metadata:
      labels:
        app: audiobookshelf
    spec:
      containers:
      - name: audiobookshelf
        image: ghcr.io/advplyr/audiobookshelf:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        volumeMounts:
        - name: audiobooks
          mountPath: /audiobooks
        - name: config
          mountPath: /config
        - name: metadata
          mountPath: /metadata
      volumes:
      - name: audiobooks
        nfs:
          server: 192.168.2.252
          path: /mnt/tank/nfs/Temp/Books
      - name: config
        persistentVolumeClaim:
          claimName: audiobookshelf-config-pvc
      - name: metadata
        persistentVolumeClaim:
          claimName: audiobookshelf-metadata-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazarr
  namespace: arr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bazarr
  template:
    metadata:
      labels:
        app: bazarr
    spec:
      containers:
      - name: bazarr
        image: lscr.io/linuxserver/bazarr:latest
        ports:
        - containerPort: 6767
        volumeMounts:
        - name: movies
          mountPath: /movies
        - name: config
          mountPath: /config
        - name: tv
          mountPath: /tv
        livenessProbe:
          httpGet:
            path: /
            port: 6767
          initialDelaySeconds: 60
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /
            port: 6767
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
        resources:
          requests:
            memory: "210Mi"
            cpu: "100m"
      volumes:
      - name: movies
        nfs:
          server: 192.168.2.252
          path: /mnt/tank/nfs/Temp/Movies
      - name: config
        persistentVolumeClaim:
          claimName: bazarr-config-pvc
      - name: tv
        nfs:
          server: 192.168.2.252
          path: /mnt/tank/nfs/Temp/Tv
