k8s/arr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: arr
spec:
  selector:
    app: sonarr
  ports:
  - protocol: TCP
    port: 8989
    targetPort: 8989
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: arr
spec:
  selector:
    app: prowlarr
  ports:
  - protocol: TCP
    port: 9696
    targetPort: 9696
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: arr
spec:
  selector:
    app: radarr
  ports:
  - protocol: TCP
    port: 7878
    targetPort: 7878
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: lidarr
  namespace: arr
spec:
  selector:
    app: lidarr
  ports:
  - port: 8686
    targetPort: 8686
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: readarr
  namespace: arr
spec:
  type: ClusterIP
  ports:
    - port: 8787
      targetPort: 8787
  selector:
    app: readarr
---
apiVersion: v1
kind: Service
metadata:
  name: audiobookshelf
  namespace: arr
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: audiobookshelf
