k8s/arr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarr-gateway
  namespace: arr
spec:
  parentRefs:
  - name: gateway-local-koryalbert
    namespace: gateway
    sectionName: local-koryalbert-net
  hostnames:
  - "tv.local.koryalbert.net"
  - "sonarr.local.koryalbert.net"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: sonarr
      port: 8989
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr-gateway
  namespace: arr
spec:
  parentRefs:
  - name: gateway-local-koryalbert
    namespace: gateway
    sectionName: local-koryalbert-net
  hostnames:
  - "movies.local.koryalbert.net"
  - "radarr.local.koryalbert.net"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: radarr
      port: 7878
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prowlarr-gateway
  namespace: arr
spec:
  parentRefs:
  - name: gateway-local-koryalbert
    namespace: gateway
    sectionName: local-koryalbert-net
  hostnames:
  - "prowlarr.local.koryalbert.net"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: prowlarr
      port: 9696
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: readarr-gateway
  namespace: arr
spec:
  parentRefs:
  - name: gateway-local-koryalbert
    namespace: gateway
    sectionName: local-koryalbert-net
  hostnames:
  - "readarr.local.koryalbert.net"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: readarr
      port: 8787
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: audiobookshelf-gateway
  namespace: arr
spec:
  parentRefs:
  - name: gateway-local-koryalbert
    namespace: gateway
    sectionName: local-koryalbert-net
  hostnames:
  - "audiobookshelf.local.koryalbert.net"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: audiobookshelf
      port: 80
